# RobotRL-Colab

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/: config.toml
docs/: RARL_migrated_README.md  agent_training_loop_guideline.md  multi_agent_harness.md  r30o_pick_place_reward_design_db.md  recording_handoff_log.md  robotrl_30min_orchestrator_protocol.md
docs/colab/: r30o_adversarial_review_2026-06-11.md  r30o_lab.md  runbook.md
notebooks/: RobotRL_Colab_Run.ipynb
robotrl/: __init__.py  cli.py  colab.py  fetch_envs.py  fetch_training.py  harness.py  improvement_loop.py  video.py
robotrl/agents/: __init__.py  q_learning.py
robotrl/assets/: fetch_box_place.xml  fetch_box_place_two.xml
robotrl/envs/: __init__.py  line_world.py  robot_arm.py
runs/colab/dry_run_stage1_strict_withdraw_seed7/: fetch_loop_spec.json
runs/learning/: README.md
runs/learning/run_001_fetch_pick_place_loop_seed7/: eval_results.json  fetch_loop_spec.json
runs/learning/run_002_fetch_box_place_loop_seed7/: eval_results.json  fetch_loop_spec.json  placement_success_inspection.json
runs/learning/run_003_fetch_box_place_dense_loop_seed7/: eval_results.json  fetch_loop_spec.json
runs/learning/run_007_fetch_box_right_shaped_loop_seed7/: eval_results.json  (+1 more)
runs/learning_2/: README.md
runs/learning_3/: README.md
runs/learning_4/: README.md
skills/r30o-adversarial-review/: SKILL.md
skills/robotrl-colab-handoff/: SKILL.md
tests/: test_colab.py  test_fetch_training.py  test_harness.py  test_improvement_loop.py  test_line_world.py  test_q_learning.py  test_robot_arm.py
(+47 files in other folders)
